Improved the front end.

--- a/base-image/Dockerfile
+++ b/base-image/Dockerfile
@@ -1,9 +1,4 @@
-FROM ros:indigo
-RUN apt-get clean
+from ros:george-melodic                                     
 RUN apt-get update
-RUN apt-get install -y g++
-
-RUN apt-get update && apt-get install -y ros-indigo-rosbridge-server ros-indigo-slam-gmapping
-
-RUN apt-get install vim-gtk -y
+RUN apt-get install -y g++ && apt-get install -y ros-melodic-rosbridge-server
 EXPOSE 9090
